--- a/fastube/fastube/templates/base.html
+++ b/fastube/fastube/templates/base.html
@@ -1,12 +1,10 @@
-{% load staticfiles %}<!DOCTYPE html>
+{% load pipeline %}<!DOCTYPE html>
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="{% static "stylesheets/main.css" %}">
-        <link rel="stylesheet" href="{% static "stylesheets/partials/header.css" %}">
-        <link rel="stylesheet" href="{% static "stylesheets/partials/footer.css" %}">
+        {% stylesheet "fastube" %}
 
     </head>
 
