--- a/fastube/users/templates/user/signup.html
+++ b/fastube/users/templates/user/signup.html
@@ -4,4 +4,13 @@
 
 {% block content %}
     <h1>{{ site_name }}</h1>
+    <form action="{% url 'user:signup' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="next_page" value="{{ request.GET.next }}">
+        <input type="text" name="username" placeholder="username" required>
+        <input type="password" name="password" placeholder="password" required>
+        <input type="email" name="email" id="email" placeholder="email">
+        <input type="text" name="phonenumber" placeholder="phonenumber" required>
+        <input type="submit" value="Signup">
+    </form>
 {% endblock %}
