--- a/fastube/users/templates/user/login.html
+++ b/fastube/users/templates/user/login.html
@@ -6,6 +6,7 @@
     <h1>{{ site_name }}</h1>
     <form action="{% url 'user:login' %}" method="POST">
         {% csrf_token %}
+        <input type="hidden" name="next_page" value="{{ request.GET.next }}">
         <input type="text" name="username" placeholder="username" required>
         <input type="password" name="password" placeholder="password" required> 
         <input type="submit" value="Login">
