--- a/fastube/users/templates/user/login.html
+++ b/fastube/users/templates/user/login.html
@@ -11,4 +11,12 @@
         <input type="password" name="password" placeholder="password" required> 
         <input type="submit" value="Login">
     </form>
+
+    <section class="social-login">
+        <ul>
+            <li>
+                <a href="{% url 'social:begin' backend='facebook' %}">Login via Facebook</a>
+            </li>
+        </ul>
+    </section>
 {% endblock %}
